[package]
name = "shodanify-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shodanify"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["compression-gzip", "fs"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
flate2 = "1"
rayon = "1"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
regex = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
arc-swap = "1"
dns-lookup = "2"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
